# recvis24_a3

./: .gitignore  README.md  data.py  evaluate.py  get_dataset_statistics.py  main.py  model.py  model_factory.py  pyproject.toml  utils.py
