[tool.poetry]
name = "recvis24-a3"
version = "0.1.0"
description = ""
authors = ["killian31 <80256683+killian31@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
torch = "2.1.2"
torchvision = "0.16.2"
tqdm = "^4.67.0"
timm = "^1.0.11"
torchinfo = "^1.8.0"
wandb = "^0.18.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
